syntax = "proto3";

package jobworker;

service JobWorkerService {
    rpc GetWorkItems (WorkRequest) returns (WorkResponse) {}
}

message WorkRequest {}

message WorkItem {
    string inputs = 1;
}

message WorkResponse {
    repeated WorkItem workitems = 1;
}
